--- a/sc-service/src/main/resources/application-dev.properties
+++ b/sc-service/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=18080
 server.servlet.context-path=/
 ########################### \u89E3\u51B3\u4E2D\u6587\u4E71\u7801##############
 spring.http.encoding.force=true
@@ -9,7 +9,7 @@ server.tomcat.uri-encoding=UTF-8
 logging.file=D:/logs/sc-tools.log
 logging.level.com.applet.mapper=debug
 ###########################\u6570\u636E\u5E93\u914D\u7F6E##################
-spring.datasource.url=jdbc:mysql://localhost:3306/quotationtool?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://192.168.1.108:3306/quotationtool?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
